# ai-ccelerating-uc-agent

./: .gitignore  build_submission.py  clean_main.py  compare_solutions.ipynb  compare_solutions.py  create_submission.py  create_submission_test.py  ed_solution.pkl  ed_solution_again.pkl  ed_solution_layer.pkl  example_model.py  lp_solution.pkl  main.py  main_ablations.py  main_less_gens.py  main_profile.py  pyproject.toml  sample.json  sweeps.csv  test_ed_layer.py  test_ed_layer_big.py  test_uc_model.py
ai_ccelerating_uc_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
configs/: ablations_default_config.yaml  all_gens_config.yaml  config_round.yaml  debug_scipy.yaml  default.yaml  engaging_parallel_lp.yaml  engaging_scipy.yaml  engaging_test.yaml  exclude_gens.yaml  idea_1_config.yaml  idea_1_config_profile.yaml  less_gens_config.yaml  simple_config.yaml  simple_round.yaml
eval/: ED_Script.jl  ingestion.py  scoring.py
jobs/: run_train_one.sh  submit_profiling.sh  sweep_chunks.sh  sweep_workers.sh  train.sh  train_cpu.sh  train_more_cores.sh  train_parallel.sh  train_parallel_array.sh  train_sweep.sh
logs/: uc_train_4643486.err  uc_train_4643486.out  uc_train_4643730.err  uc_train_4643730.out  uc_train_4643731.err  uc_train_4643731.out  uc_train_4643732.err  uc_train_4643732.out  uc_train_4643739.err  uc_train_4643739.out  uc_train_4643760.err  uc_train_4643760.out  uc_train_4643761.err  uc_train_4643761.out  uc_train_4643763.out  uc_train_4643765.err  uc_train_4643765.out
src/: util.py  (+2 more)
submission_v2/: metadata  model.dill  prediction.dill  pyproject.toml
(+92 files in other folders)
