[project]
name = "ai-ccelerating-uc-agent"
version = "0.0.0"
requires-python = ">=3.11.*"
dependencies = [
    "dill>=0.4.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pyyaml>=6.0.3",
    "torch==2.10.0",
    "tqdm>=4.67.3",
]

[tool.setuptools]
packages = ["src", "src.models", "src.datasets", "src.utils"]
